--- a/index.html
+++ b/index.html
@@ -2,38 +2,40 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-    <title>iChat</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="reset.css" />
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <script src="chat.js"></script>
+  <title>iChat</title>
 </head>
 
 <body>
-    <div id="container">
-        <div id="messagingAppContainer">
-            <div id="nameRow">
-                <h1>Alex</h1>
-            </div>
-            <div id='messagingBody'>
-                <div class="userText">
-                    <div class='messageBubble'>
-                        <p>Hi Alex</p>
-                    </div>
-                </div>
-                <div class="friendText">
-                    <div class="messageBubble">
-                        <p>Hi George</p>
-                    </div>
-                </div>
-            </div>
-            <div id='writeMessageRow'>
-                <button id='emojiOption'>😊</button>
-                <input type="text" placeholder="Write your message here" />
-                <button type="button">send</button>
-            </div>
+  <div id="container">
+    <div id="messagingAppContainer">
+      <div id="nameRow">
+        <h1>Alex</h1>
+      </div>
+      <div id='messagingBody'>
+        <div class="userText">
+          <div class='messageBubble'>
+            <p>Hi Alex</p>
+          </div>
         </div>
-
+        <div class="friendText">
+          <div class="messageBubble">
+            <p>Hi George, how are you today? I'm great, it's been ages!</p>
+          </div>
+        </div>
+        <div id='newMessage'></div>
+      </div>
+      <div id='writeMessageRow'>
+        <button id='sender1' onclick="sendMessage(1, document.getElementById('messageInput').value)">Send 1</button>
+        <input type="text" placeholder="Write your message here" id="messageInput" />
+        <button id='sender2' onclick="sendMessage(2, document.getElementById('messageInput').value)">Send 2</button>
+      </div>
     </div>
+  </div>
 </body>
 
 </html>
