--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="reset.css" />
   <link rel="stylesheet" type="text/css" href="styles.css" />
-  <script src="chat.js"></script>
   <title>iChat</title>
 </head>
 
@@ -27,15 +26,15 @@
             <p>Hi George, how are you today? I'm great, it's been ages!</p>
           </div>
         </div>
-        <div id='newMessage'></div>
       </div>
       <div id='writeMessageRow'>
-        <button id='sender1' onclick="sendMessage(1, document.getElementById('messageInput').value)">Send 1</button>
+        <button id='sender1' onclick='user1.addMessage("hello!")'>Send 1</button>
         <input type="text" placeholder="Write your message here" id="messageInput" />
-        <button id='sender2' onclick="sendMessage(2, document.getElementById('messageInput').value)">Send 2</button>
+        <button id='sender2' onclick="user2.addMessage('hi')">Send 2</button>
       </div>
     </div>
   </div>
+  <script src="chat.js"></script>
 </body>
 
 </html>
