--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="reset.css" />
   <link rel="stylesheet" type="text/css" href="styles.css" />
+  <script src="chat.js"></script>
+  <!-- user1 and user2 are scope bound to the function, look into how to make them accessible in throughout the page -->
+  <script>
+    window.addEventListener('load', function () {
+      var user1 = person("friendText");
+      var user2 = person("userText");
+    })
+  </script>
   <title>iChat</title>
 </head>
 
@@ -34,7 +42,6 @@
       </div>
     </div>
   </div>
-  <script src="chat.js"></script>
 </body>
 
 </html>
