--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
   <link rel="stylesheet" type="text/css" href="reset.css" />
   <link rel="stylesheet" type="text/css" href="styles.css" />
   <script src="chat.js"></script>
-  <!-- user1 and user2 are scope bound to the function, look into how to make them accessible in throughout the page -->
-  <script>
-    window.addEventListener('load', function () {
-      var user1 = person("friendText");
-      var user2 = person("userText");
-    })
-  </script>
   <title>iChat</title>
 </head>
 
@@ -34,9 +27,15 @@
             <p>Hi George, how are you today? I'm great, it's been ages!</p>
           </div>
         </div>
+        <div class="friendText">
+          <div class="messageBubble">
+            <p>Can't manage to access the person class from NBS.init, logging out NBS init only returns an object with
+              an empty function</p>
+          </div>
+        </div>
       </div>
       <div id='writeMessageRow'>
-        <button id='sender1' onclick='user1.addMessage(document.getElementById("messageInput").value)'>Send 1</button>
+        <button id='sender1' onclick='NBS.init.sendMessageUser1()'>Send 1</button>
         <input type="text" placeholder="Write your message here" id="messageInput" />
         <button id='sender2' onclick='user2.addMessage(document.getElementById("messageInput").value)'>Send 2</button>
       </div>
