--- a/index.html
+++ b/index.html
@@ -1,46 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="reset.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <script src="chat.js"></script>
+    <title>iChat</title>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="./index.js"></script>
+    <script>
+      var io = io();
+    </script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="reset.css" />
-  <link rel="stylesheet" type="text/css" href="styles.css" />
-  <script src="chat.js"></script>
-  <title>iChat</title>
-</head>
-
-<body onload="NBS.init();">
-  <div id="container">
-    <div id="messagingAppContainer">
-      <div id="nameRow">
-        <h1>Alex</h1>
-      </div>
-      <div id='messagingBody'>
-        <div class="user2">
-          <div class='messageBubble'>
-            <p>Hi Alex</p>
+  <body onload="NBS.init();">
+    <div id="container">
+      <div id="messagingAppContainer">
+        <div id="nameRow">
+          <h1>Alex</h1>
+        </div>
+        <div id="messagingBody">
+          <div class="user2">
+            <div class="messageBubble">
+              <p>Hi Alex</p>
+            </div>
+          </div>
+          <div class="user1">
+            <div class="messageBubble">
+              <p>Hi George, how are you today? I'm great, it's been ages!</p>
+            </div>
+          </div>
+          <div class="user1">
+            <div class="messageBubble">
+              <p>P.s. run node server.js to spin up the server</p>
+            </div>
           </div>
         </div>
-        <div class="user1">
-          <div class="messageBubble">
-            <p>Hi George, how are you today? I'm great, it's been ages!</p>
-          </div>
+        <div id="writeMessageRow">
+          <button id="sender1">Send 1</button>
+          <input
+            type="text"
+            placeholder="Write your message here"
+            id="messageInput"
+          />
+          <button id="sender2">Send 2</button>
         </div>
-        <div class="user1">
-          <div class="messageBubble">
-            <p>Can't manage to access the person class from NBS.init, logging out NBS init only returns an object with
-              an empty function</p>
-          </div>
-        </div>
-      </div>
-      <div id='writeMessageRow'>
-        <button id='sender1'>Send 1</button>
-        <input type="text" placeholder="Write your message here" id="messageInput" />
-        <button id='sender2'>Send 2</button>
       </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
