created message store in json file

--- a/main.html
+++ b/main.html
@@ -16,23 +16,7 @@
         <div id="nameRow">
           <h1>Alex</h1>
         </div>
-        <div id="messagingBody">
-          <div class="user2">
-            <div class="messageBubble">
-              <p>Hi Alex</p>
-            </div>
-          </div>
-          <div class="user1">
-            <div class="messageBubble">
-              <p>Hi George, how are you today? I'm great, it's been ages!</p>
-            </div>
-          </div>
-          <div class="user1">
-            <div class="messageBubble">
-              <p>P.s. run node server.js to spin up the server</p>
-            </div>
-          </div>
-        </div>
+        <div id="messagingBody"></div>
         <div id="writeMessageRow">
           <button id="sender1">Send 1</button>
           <input
